fix: divers